---- 0.6.3 Released -------------------------------------------------------------------

* February 24, 2007, Flemming H. Sørensen *

Localized PrintQueue.

* February 21, 2007, Flemming H. Sørensen *

The language-lists in the Locale preferences is now wide enough to show the full languagenames (Bug #109)
Added updated Keymap->Language database to the Keymap preferences (Bug #108)
Keymap preferences can now handle a larger number of language codes, per keymap (Bug #111)

* February 19, 2007, Kaj de Vos *

Moved /atheos/autolnk/ to /usr/indexes/.

* February 18, 2007, Kaj de Vos *

Removed the atheos subdirectory to simplify and flatten the filesystem hierarchy.
Moved /system/libs/ to /system/libraries/.
Note that you have to adapt your GrUB menu.lst file when upgrading.

* February 18, 2007, Flemming H. Sørensen *

New Keyboard pref.

* February 17, 2007, Kristian Van Der Vliet *

The VGA_MISC_OUT_W and VGA_MISC_OUT_R registers were swapped in the Savage driver,
leading to incorrect hardware configuration and flcikering displays in some cases.
Patch from Tim ter Laak <timl@scintilla.utwente.nl>

* February 13, 2007, Flemming H. Sørensen *

Localized the Printers preferences.

* February 8, 2007, Kristian Van Der Vliet *

Fix pthread_exit() and pthread_join() in libpthread
	o Pass the value in value_ptr to exit_thread() in pthread_exit()
	o Retrieve the value from wait_for_thread() and set value_ptr in pthread_join()
	o Use our own entry function for spawn_thread() in pthread_create() and call
	  pthread_exit() with the return value when the thread entry function returns

* January 29, 2007, Kristian Van Der Vliet *

Fixed a serious bug with the Savage driver that affected Savage 4 and Savage 2000 series
cards (and may have caused other us-seen bugs). The framebuffer and registers are now
mapped correctly for the correct type of chipset.

* January 27 2007, Kaj de Vos *

Moved /atheos/sys/ to /atheos/system/. It has been sticking out like a sore thumb