@@ -1,3 +1,10 @@
+* April 4, 2007, Arno Klenke *
+
+Added SetLabel() methods to the os::Menu and os::MenuItem class
+Finally removed the registrar call interface
+Added the os::RegistrarFileType class
+Fixed some mouse handling issues in the os::Window and the os::TextView class
+
 * March 31, 2007, Kristian Van Der Vliet *
 
 libsyllable
@@ -1372,5 +1379,8 @@ disabled controls.  The following files have been patched:
 
 	The sub-menu arrow is now drawn corretly, and menus which have children
 	are now drawn slightly larger to allow for the arrow.
+
+
+
 
 
